<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".GameActivities.CharacterCreation.CharacterCreationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:scaleX="3"
        android:scaleY="3"
        app:srcCompat="@drawable/character_art" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_character_creation_char_name"
            style="@style/BMRTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/main_character_name"
            android:textColor="#ffe2a6"
            android:textSize="40sp"
            tools:layout_margin="6dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_character_creation_char_face_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/char_face_woman" />

            <ImageView
                android:id="@+id/activity_character_creation_char_face_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:src="@drawable/char_face_man" />

        </LinearLayout>

        <EditText
            android:id="@+id/activity_character_creation_edit_char_name"
            style="@style/BMRTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/input_main_character_name"
            android:inputType="textPersonName"
            android:textColor="#ffe2a6"
            android:textColorHint="#C3BCBC"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_character_creation_pointsText"
                style="@style/BMRTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/character_stat_points"
                android:textColor="#ffe2a6"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/activity_character_creation_points"
                style="@style/BMRTextSmall"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/character_stats_firstpoints"
                android:textColor="#ffe2a6"
                android:textSize="32sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus_str"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_minus"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/activity_character_creation_strengthText"
                style="@style/BMRTextSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/character_stats_text_strength"
                android:textColor="#ffe2a6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_plus_str"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_plus"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"

            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus_agi"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_minus"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/activity_character_creation_agilityText"
                style="@style/BMRTextSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/character_stats_text_agility"
                android:textColor="#ffe2a6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_plus_agi"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_plus"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus_int"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"

                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_minus"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/activity_character_creation_intellectText"
                style="@style/BMRTextSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/character_stats_text_intellect"
                android:textColor="#ffe2a6"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_plus_int"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_plus"
                android:textSize="23sp" />

        </LinearLayout>

        <Button
            android:id="@+id/activity_character_creation_proceedButton"
            style="@style/BMRButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/character_create"
            android:textSize="30sp" />

    </LinearLayout>

</FrameLayout>