<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_in_location_backgroundFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".GameActivities.InLocation.InLocationActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/activity_in_location_fragHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="100">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/activity_in_location_menu_toMenu"
                android:textSize="22sp"
                android:layout_width="80sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                style="@style/BMRButton"
                android:text="@string/in_location_text_menu" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/activity_in_location_menu_loc"
                android:textSize="22sp"
                android:layout_width="80sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                style="@style/BMRButton"
                android:text="@string/in_location_text_loc" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/activity_in_location_menu_statistics"
                android:textSize="22sp"
                android:layout_width="80sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:enabled="true"
                style="@style/BMRButton"
                android:text="@string/in_location_text_stats" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/activity_in_location_menu_map"
                android:textSize="22sp"
                android:layout_width="80sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:enabled="true"
                style="@style/BMRButton"
                android:text="@string/in_location_text_map" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>