<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_border"

    tools:context=".GameFragments.InLocationFragment">

    <ScrollView
        android:id="@+id/fragment_in_location_scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_in_location_content_LocationName"
                style="@style/BMRTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/in_location_text_name"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/fragment_in_location_content_LocationDescriptionTitle"
                style="@style/BMRTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/in_location_text_description"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/fragment_in_location_content_LocationDescriptionContent"
                style="@style/BMRTextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/in_location_text_textview"
                android:textAlignment="inherit"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/fragment_in_location_content_NPCTitle"
                style="@style/BMRTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/in_location_text_npc"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/fragment_in_location_content_NPCDescription"
                style="@style/BMRTextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/in_location_text_textview"
                android:textAlignment="inherit"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_in_location_content_difficultyTitle"
                    style="@style/BMRTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/in_location_text_difficulty"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/fragment_in_location_content_difficulty"
                    style="@style/BMRTextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/in_location_text_medium_difficulty"
                    android:textAlignment="inherit"
                    android:textColor="@android:color/holo_orange_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_in_location_content_NPCattack"
                    style="@style/BMRButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/in_location_text_attack" />

                <Button
                    android:id="@+id/fragment_in_location_content_NPCtalk"
                    style="@style/BMRButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/in_location_text_talk" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/fragment_in_location_content_GoUp"
                    style="@style/BMRButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:text="@string/arrow_up"
                    android:textSize="27sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fragment_in_location_content_GoLeft"
                        style="@style/BMRButton"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:text="@string/arrow_left"
                        android:textSize="50sp" />

                    <Space
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <Button
                        android:id="@+id/fragment_in_location_content_GoRight"
                        style="@style/BMRButton"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:text="@string/arrow_right"
                        android:textSize="50sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/fragment_in_location_content_GoDown"
                    style="@style/BMRButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"

                    android:layout_gravity="center"
                    android:text="@string/arrow_down"
                    android:textSize="27sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>