...
                android:gravity="center"
                android:text="@string/character_stats_text_intellect"
                android:textColor="#ffe2a6"
                android:textSize="26sp" />

            <Button
                android:id="@+id/fragment_stats_plus_int"
                style="@style/BMRButtonSmall"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
...
